--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -8,4 +8,8 @@ jobs:
   build:
     name: Post Welcome Message
     runs-on: ubuntu-lateset
-    
+    steps:
+      - run: gh pr comment $PR_URL --body "Welcome to the repository!"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
